# game-of-life

./: .gitignore  Cargo.toml  README.md  justfile  tsconfig.json
.github/workflows/: cd.yml  ci.yml
benches/: hashlife_benchmark.rs  next_step_benchmark.rs  render_benchmark.rs
examples/: acorn.rs  render.rs
src/: app.rs  config.rs  hashlife.rs  image_bitmap.rs  input_handler.rs  lib.rs  lru_cache.rs  main.rs  point.rs  quadtree.rs  quadtree_pool.rs  renderer.rs  solver.rs  utils.rs
src/app/: stats.rs
src/input_handler/: pattern_file.rs
src/quadtree/: convert.rs  manip.rs
src/quadtree_pool/: convert.rs  manip.rs  quadtree.rs
src/renderer/: controls.rs  convert.rs  drawing.rs  image_bitmap.rs  point.rs  test_utils.rs
src/solver/: cell_ops.rs  controls.rs  hashlife.rs  liferule.rs  quadtree_pool.rs
src/solver/quadtree_pool/: convert.rs  manip.rs
src/web/: index.html  index.ts
tests/: general.rs  multi_step.rs  one_step.rs
tests/utils/: mod.rs
web/: .gitignore  app.ts  biome.json  controls.ts  index.html  index.ts  package.json  prettier.config.js  tsconfig.app.json  tsconfig.json  ui.ts  vite.config.ts  vitest.browser.config.ts
web/benches/: render_benchmark.bench.ts  wasm_benchmark.bench.ts
web/patterns/: blocklayingswitchengine.rle  frothingpuffer.rle
web/public/favicon/: site.webmanifest
web/src/: App.svelte  app.css
web/src/assets/patterns/: Day-and-Night-gun-and-antigun.rle  coral.rle  justyna.rle  replicator.rle  sqrt-replicator.rle
web/src/lib/: GestureHandler.ts  shared.svelte.ts  wasm.ts
web/src/lib/components/: Canvas.svelte  (+4 more)
(+5 files in other folders)
