[package]
name = "game-of-life"
description = "Hashlife implementation"
repository = "https://github.com/waresnew/game-of-life"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.121"
num-bigint = "0.5.0"
regex = "1.13.0"
gloo-console = "0.4.0"
num-integer = "0.1.46"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.2"

[[bench]]
name = "next_step_benchmark"
harness = false

[[bench]]
name = "render_benchmark"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
